# matrop

./: .gitignore  CMakeLists.txt  README.md
sample/: Filter_1  MatrixInput_2
src/: App.cpp  App.h  Common.h  Main.cpp  Matrix.cpp  Matrix.h  Util.cpp  Util.h
src/conv/: ConvApp.cpp  ConvApp.h
src/multiply/: MultiplyApp.cpp  MultiplyApp.h
src/scan/: ScanApp.cpp  ScanApp.h
